<resources>
    <string name="app_name">JgoDemos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="exo_download_description">Download</string>
    <string name="list_view_subitem_content_first">The rebellious often change the world. Defiant, unwavering, they are the sort who don\'t give up.They break with the norm and leave their mark on history,inspiring and clearing the path for the generations that follow.</string>
    <string name="list_view_subitem_content_second">Zion Williamson is one of the most unique athletes to come through the college ranks in recent history and had the freshman season to match, emerging as one of the nation’s most efficient scorers and electric two-way players.</string>
    <string name="list_view_subitem_content_third">Yao Ming is a Chinese basketball executive and retired professional basketball player who played for the Shanghai Sharks of the Chinese Basketball Association (CBA) and the Houston Rockets of the National Basketball Association (NBA). </string>

    <string name="person_list_content_y_m">Yao Ming (Chinese: 姚明; born September 12, 1980) is a Chinese basketball executive and retired professional basketball player who played for the Shanghai Sharks of the Chinese Basketball Association (CBA) and the Houston Rockets of the National Basketball Association (NBA).</string>
    <string name="person_list_content_more">More</string>


    <string name="img_des">Image_description_default</string>
    <!-- transition -->
    <string name="transition_explode">Explode</string>
    <string name="transition_slide">Slide</string>
    <string name="transition_fade">Fade</string>
    <string name="transition_back">Back_To_Transition_Activity</string>

    <string name="transition_activity">Activity Transition</string>
    <string name="scene_activity">Scene Transition</string>

    <string name="scene_from">出発</string>
    <string name="scene_to">到着</string>
    <string name="scene_from_station">新宿</string>
    <string name="scene_to_station">町田</string>

    <string name="circular_reveal_wifi">Wifi</string>
    <string name="circular_reveal_bluetooth">Bluetooth</string>
    <string name="circular_reveal_screen_ratation">自動回転</string>
    <string name="circular_reveal_flight_mode">機内モード</string>
    <string name="circular_reveal_location">位置情報</string>
    <string name="circular_reveal_screen_corp">スクリーンショット</string>
    <string name="circular_reveal_wifi_sample_1">SPWN_5218n</string>
    <string name="circular_reveal_wifi_sample_2">Buffalo_A_450E</string>
    <string name="circular_reveal_wifi_sample_3">Buffalo_D_450E</string>


    <string name="overlay_list_sample_text">Overlay list sample %s</string>

    <!-- custome_view -->
    <string name="start_progress">Start</string>
    <string name="click_hint">Click Here.</string>

</resources>
