<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/circular_reveal_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8dp"
    android:padding="@dimen/margin_8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/circular_reveal_wifi_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:duplicateParentState="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/transition_circular_icon_size"
                android:layout_height="@dimen/transition_circular_icon_size"
                android:src="@drawable/network_wifi_40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:gravity="center"
                android:textColor="@color/dodgerblue"
                android:text="@string/circular_reveal_wifi"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/transition_circular_icon_size"
                android:layout_height="@dimen/transition_circular_icon_size"
                android:src="@drawable/bluetooth_40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:gravity="center"
                android:textColor="@color/dodgerblue"
                android:text="@string/circular_reveal_bluetooth"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/transition_circular_icon_size"
                android:layout_height="@dimen/transition_circular_icon_size"
                android:src="@drawable/screen_rotation_40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:gravity="center"
                android:textColor="@color/dodgerblue"
                android:text="@string/circular_reveal_screen_ratation"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/transition_circular_icon_size"
                android:layout_height="@dimen/transition_circular_icon_size"
                android:src="@drawable/flight_mode_40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:gravity="center"
                android:textColor="@color/dodgerblue"
                android:text="@string/circular_reveal_flight_mode"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/transition_circular_icon_size"
                android:layout_height="@dimen/transition_circular_icon_size"
                android:src="@drawable/location_40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:gravity="center"
                android:textColor="@color/dodgerblue"
                android:text="@string/circular_reveal_location"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/transition_circular_icon_size"
                android:layout_height="@dimen/transition_circular_icon_size"
                android:src="@drawable/screen_crop_40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:gravity="center"
                android:textColor="@color/dodgerblue"
                android:text="@string/circular_reveal_screen_corp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>